Fixed the title overflow of very long link titles in the link edit popup

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,9 @@ a:visited:hover {
 }
 
 #link_edit h1 {
+    width: 90%;
+    text-overflow: ellipsis;
+    overflow: hidden;
     margin-bottom: 15px;
 }
 
